--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 			<!-- Optional theme -->
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 			<link rel="stylesheet" type="text/css" href="css/style.css">
+
+			<style>
+				.number {
+				  	float: left;
+				  	margin: 10px;
+				  	border: 5px solid #fff;
+					text-align: center;
+				    font-size: 12px;
+				    font-weight: 700;
+				    color: #000;
+				 
+				    -webkit-transition: box-shadow 0.5s ease;
+				    -moz-transition: box-shadow 0.5s ease;
+				    -o-transition: box-shadow 0.5s ease;
+				    -ms-transition: box-shadow 0.5s ease;
+				    transition: box-shadow 0.5s ease;
+				}
+			</style>
 	    </head>
 	    <body>
 	    <div class="panel panel-default">
